--- a/style.css
+++ b/style.css
@@ -118,7 +118,6 @@ body{
   margin-left: 200px;
   text-align: justify;
   line-height: 1.5;
-  width: 30%;
 }
 
 .intro-container p span{
@@ -189,14 +188,14 @@ body{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 100%;
+    width: 80%;
     height: 100vh;
     position: fixed;
     top: 0;
     right: -100%;
     z-index: 100;
-    background-color: transparent;
-    backdrop-filter: blur(20px);
+    background-color: #666;
+    opacity: 80%;
     transition: all 0.5s ease-in-out;
   }
 
@@ -269,7 +268,7 @@ body{
 
   .image img{
     width: 100%;
-    height: 400px;
+    height: 300px;
     margin-left: 0;
     position: relative;
     top: 0;
