--- a/style.css
+++ b/style.css
@@ -194,7 +194,7 @@ body{
     top: 0;
     right: -100%;
     z-index: 100;
-    background-color: #666;
+    background-color: #574f4f;
     opacity: 80%;
     transition: all 0.5s ease-in-out;
   }
@@ -214,7 +214,8 @@ body{
     text-align: center;
     margin-left: 70px;
     color: white;
-    font-size: 16px;
+    font-size: 18px;
+    text-transform: uppercase;
   }
 
   .open,
@@ -273,6 +274,7 @@ body{
     margin-left: 0;
     position: relative;
     top: 0;
+    margin-top: 20px;
     box-shadow: none;
   }
 
