--- a/style.css
+++ b/style.css
@@ -126,12 +126,13 @@ body{
 }
 
 .image img {
-  width: 300px;
-  height: 300px;
+  width: 350px;
+  height: 350px;
   border-radius: 20%;
   margin-left: 900px;
   position: absolute;
-  top: 250px;
+  top: 200px;
+  object-fit: cover;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.2),
     0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
@@ -277,6 +278,7 @@ body{
     top: 0;
     margin-top: 20px;
     box-shadow: none;
+    object-fit: cover;
   }
 
   .intro-container button{
