--- a/style.css
+++ b/style.css
@@ -253,6 +253,12 @@ body{
     margin-left: 70px;
   }
 
+  .intr0{
+    position: relative;
+    left: 0;
+    right: 10px;
+  }
+
   .intro-container h1{
     font-size: 24px;
     position: absolute;
@@ -289,7 +295,7 @@ body{
 
   .intro-container button{
     padding: 10px 20px;
-    margin-left: 0px;
+    margin-left: 100px;
   }
 
   
