--- a/style.css
+++ b/style.css
@@ -111,11 +111,12 @@ body{
 }
 
 .intro-container p {
-  font-size: 18px;
+  font-size: 17px;
   color: #666;
   margin-bottom: 0px;
   margin-top: 30px;
   margin-left: 200px;
+  padding: .5rem 0;
   text-align: justify;
   line-height: 1.5;
 }
@@ -273,7 +274,7 @@ body{
   }
 
   .intro-container p{
-    font-size: 14px;
+    font-size: 12px;
     margin-left: 0;
     width: 100%;
   }
