--- a/style.css
+++ b/style.css
@@ -164,6 +164,115 @@ body{
   font-size: 20px;
 }
 
+.services {
+    padding: 60px 20px;
+    background-color: rgba(253, 253, 253, 0.37);
+    position: relative;
+    text-align: center;
+}
+
+.services-container {
+    max-width: 1600px;
+    /* margin: 0 auto; */
+    padding: 0 15px;
+}
+
+.services-grid{
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+    gap: 30px;
+    justify-items: center;
+}
+
+.services-item {
+    background-color: #f9f9f9;
+    border-radius: 10px;
+    box-shadow: 0 4px 12px 0 rgba(112, 102, 102, 0.1),  0 4px 12px 0 rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+    width: 300px;
+    height: 300px;
+    padding: 40px 20px;
+    text-align: center;
+    transition: transform 0.3s ease;
+}
+
+.services-item:hover{
+   transform: scale(1.05);
+}
+
+.services-item img{
+  width: 50px;
+  background-color: transparent;
+  margin-left: -200px;
+  position: relative;
+  cursor: pointer;
+}
+
+.services-item h4{
+  position: absolute;
+  margin-top: -40px;
+  margin-left: 75px;
+  font-weight: bolder;
+  font-size: 20px;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+}
+
+.services-item h4:hover {
+  letter-spacing: 2px;
+}
+
+.services-item p {
+  padding-top: 17px;
+  text-align: justify;
+  line-height: 1.5;
+  font-size: 15px;
+ 
+}
+
+.services-item img:hover {
+  animation: bounce 0.5s;
+}
+
+@keyframes bounce {
+  0%, 100%{
+    transform: translateY(0);
+  }
+
+  20%, 80%{
+    transform: translateY(0);
+  }
+  40%, 60% {
+    transform: translateY(-10px);
+  }
+}
+
+.services-container .services-intro h1 {
+  color: rgb(218, 11, 11);
+  font-size: 35px;
+  transition: all 0.3s ease-in;
+  cursor: pointer;
+  margin-top: 100px;
+ 
+}
+
+.services-intro h1:hover{
+  letter-spacing: 2px;
+}
+
+.services-intro h1 span{
+  color: #797979;
+}
+
+.services-container h3{
+  margin-bottom: 60px;
+  margin-top: 10px;
+}
+
+
+
+
+
 
 #check{display: none;}
 .open,.close {
@@ -305,6 +414,10 @@ body{
     padding: 10px 30px;
     margin-left: 70px;
     align-items: center;
+  }
+
+ .services-container .services-intro h1{
+    margin-top: -40px;
   }
 
   
