--- a/style.css
+++ b/style.css
@@ -268,7 +268,89 @@ body{
   margin-top: 10px;
 }
 
+#contact{
+  width: 100%;
+  height: fit-content;
+  margin-top: 1px;
+  padding-top: 50px;
+}
 
+.contact-section{
+  display: flex;
+  justify-content: space-between;
+  background-color: #ccc;
+  align-items: flex-start;
+  padding: 20px;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+.contact-section .contact-info{
+  width: 50%;
+}
+
+.contact-info h1{
+  margin-bottom: 24px;
+  font-size: 60px;
+}
+.contact-info p{
+  font-size: 16px;
+  margin-bottom: 16px;
+  font-weight: bold;
+  
+}
+.contact-info p i{
+  margin-right: 8px;
+  font-size: 25px;
+  color: rgb(218, 11, 11);
+}
+
+.contact-section, .contact-form {
+  flex: 1;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  
+}
+
+.contact-form form {
+  display: flex;
+  flex-direction: column;
+
+}
+
+.contact-form label{
+  margin-bottom: 5px;
+  font-size: 20px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: bold;
+}
+
+.contact-form input, .contact-form textarea{
+  margin-bottom: 10px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.contact-form .tweet-button{
+  color: white;
+  background-color: rgb(218, 11, 11);
+  border: none;
+  border-radius: 20px;
+  padding: 10px 16px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: all 0.15s;
+}
+
+.contact-form .tweet-button:hover{
+  border: 2px solid #777777 ;
+  background-color: transparent;
+  color: rgb(218, 11, 11);
+  box-shadow: 0 4px 12px 0 rgba(0, 0, 0, 0.2);
+  font-size: 16px;
+}
 
 
 
@@ -418,6 +500,20 @@ body{
  .services-container .services-intro h1{
     margin-top: -20px;
   }
+
+  .contact-info{
+    margin-left: 20px;
+  }
+
+  .contact-info h1{
+    font-size: 27px;
+  }
+
+  .contact-info p{
+    font-size: 13px;
+    width: 140%;
+  }
+
 
   
 }
