--- a/style.css
+++ b/style.css
@@ -352,6 +352,27 @@ body{
   font-size: 16px;
 }
 
+.whatsapp-float{
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background-color: #25D366;
+  border-radius: 50%;
+  color: white;
+  width: 60px;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
+  font-size: 30px;
+}
+
+.whatsapp-float:hover{
+  opacity: 0.7;
+  color: black;
+  transition: all 0.5s ease-in-out;
+}
 /* footer style */
 
 .footer {
@@ -585,6 +606,28 @@ body{
     font-size: 12px;
     width: 160%;
   }
+
+  .whatsapp-float{
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background-color: #25D366;
+  border-radius: 50%;
+  color: white;
+  width: 60px;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
+  font-size: 30px;
+}
+
+.whatsapp-float:hover{
+  opacity: 0.7;
+  color: black;
+  transition: all 0.5s ease-in-out;
+}
 
   .row {
       flex-direction: column;
