--- a/style.css
+++ b/style.css
@@ -11,11 +11,59 @@ body{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    color: #333;
+}
+
+:root{
+     background-color: rgba(253, 253, 253, 0.37);
+    --text-color: #111;
+    --secondary-color: rgb(218, 11, 11);
+    --primary-color: #111;
+    --hover: #666;
+    --secondary-text: #666;
+}
+
+.darkmode{
+   background-color: #111;
+  --text-color: #fff;
+  --secondary-color: rgb(218, 11, 11);
+  --primary-color: #fff;
+  --hover: #666;
+  --secondary-text: #fff;
 }
 
 
+#theme-switch{
+  position: fixed;
+  top: 15px;
+  right: 5px;
+  background-color: var(--secondary-color);
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
+  font-size: 30px;
+}
 
+#theme-switch i {
+  /* fill: var(--primary-color); */
+  font-size: 20px;
+  color: #fff;
+}
+
+#theme-switch i:last-child{
+  display: none;
+}
+
+.darkmode #theme-switch i:first-child{
+  display: none;
+}
+
+.darkmode #theme-switch i:last-child{
+  display: block;
+}
 
  nav {
   display: flex;
@@ -24,7 +72,7 @@ body{
   position: fixed;
   z-index: 1;
   width: 100%;
-  color: rgb(218, 11, 11);
+  /* color: var(--secondary-color); */
   background-color: transparent;
   flex-wrap: wrap;
   margin: 0 20px;
@@ -39,10 +87,10 @@ body{
 
 .nav-wrapper li a {
   padding: 10px 20px;
-  margin-left: 10px;
+  margin-left: 5px;
   margin-right: 100px;
   text-decoration: none;
-  color: rgb(218, 11, 11);
+  color: var(--secondary-color);
   font-size: 19px;
   text-align: center;
   position: relative;
@@ -59,14 +107,14 @@ body{
 
 .brand h1 {
     font-size: 35px;
-    color: #797979;
+    color: var(--secondary-text);
     cursor: pointer;
     margin-left: 30px;
     transition: transform 0.3s ease;
 }
 
 .brand h1 span {
-    color: rgb(218, 11, 11);
+    color: var(--secondary-color);
     font-weight: bold;
     text-transform: capitalize;
     letter-spacing: 1px;
@@ -78,7 +126,7 @@ body{
 }
 
 .intro{
-  background-color: rgba(253, 253, 253, 0.37);
+  background-color: background-color;
   width: 100vw;
   height: 100vh;
   padding: 100px 20px;
@@ -94,25 +142,27 @@ body{
   margin-bottom: 20px;
   margin-top: 10px;
   margin-left: 200px;
+  color: var(--primary-color);
   font-size: 40px;
   letter-spacing: 1px;
 }
 
 .intro-container h1 span{
-  color: rgb(218, 11, 11);
+  color: var(--secondary-color);
 }
 
 .intro-container h3{
   margin-top: 0px;
   margin-left: 200px;
   font-weight: 200;
+  color: var(--primary-color);
   letter-spacing: 2px;
   font-size: 25px;
 }
 
 .intro-container p {
   font-size: 17px;
-  color: #666;
+  color: var(--secondary-text);
   margin-bottom: 0px;
   margin-top: 30px;
   margin-left: 200px;
@@ -122,7 +172,7 @@ body{
 }
 
 .intro-container p span{
-  color: rgb(218, 11, 11);
+  color: var(--secondary-color);
   font-size: 19px;
 }
 
@@ -142,7 +192,7 @@ body{
   margin-top: 30px;
   margin-left: 200px;
   padding: 10px 30px;
-  background-color: rgb(218, 11, 11);
+  background-color: var(--secondary-color);
   border: none;
   transition: all 0.3s ease-in-out;
 }
@@ -151,22 +201,23 @@ body{
   color: white;
   text-decoration: none;
   letter-spacing: 1px;
+  transition: all 0.3s ease-in-out;
 }
 
 .intro-container button:hover{
   background-color: transparent;
-  border: 3px solid #666;
-  color: rgb(218, 11, 11);
+  border: 3px solid var(--secondary-text);
+  color: var(--secondary-color);
 }
 
 .intro-container button a:hover{
-  color: rgb(218, 11, 11);
+  color: var(--secondary-color);
   font-size: 20px;
 }
 
 .services {
     padding: 60px 20px;
-    background-color: rgba(253, 253, 253, 0.37);
+    background-color: var(background-color);
     position: relative;
     text-align: center;
 }
@@ -247,7 +298,7 @@ body{
 }
 
 .services-container .services-intro h1 {
-  color: rgb(218, 11, 11);
+  color: var(--secondary-color);
   font-size: 35px;
   transition: all 0.3s ease-in;
   cursor: pointer;
@@ -265,6 +316,7 @@ body{
 
 .services-container h3{
   margin-bottom: 60px;
+  color: white;
   margin-top: 10px;
 }
 
@@ -302,7 +354,7 @@ body{
 .contact-info p i{
   margin-right: 8px;
   font-size: 25px;
-  color: rgb(218, 11, 11);
+  color: var(--secondary-color);
 }
 
 .contact-section, .contact-form {
@@ -335,7 +387,7 @@ body{
 
 .contact-form .tweet-button{
   color: white;
-  background-color: rgb(218, 11, 11);
+  background-color: var(--secondary-color);
   border: none;
   border-radius: 20px;
   padding: 10px 16px;
@@ -347,7 +399,7 @@ body{
 .contact-form .tweet-button:hover{
   border: 2px solid #777777 ;
   background-color: transparent;
-  color: rgb(218, 11, 11);
+  color: var(--secondary-color);
   box-shadow: 0 4px 12px 0 rgba(0, 0, 0, 0.2);
   font-size: 16px;
 }
@@ -370,7 +422,7 @@ body{
 
 .whatsapp-float:hover{
   opacity: 0.7;
-  color: black;
+  color: var(--text-color);
   transition: all 0.5s ease-in-out;
 }
 /* footer style */
@@ -385,7 +437,7 @@ body{
 .footer h5{
   font-size: 18px;
   margin-bottom: 15px;
-  color: rgb(218, 11, 11);
+  color: var(--secondary-color);
 }
 
 .footer p {
@@ -410,7 +462,7 @@ body{
   }
 
   .footer ul li a:hover{
-    color: rgb(218, 11, 11);
+    color: var(--secondary-color);
   }
 
   .social-links li a i{
@@ -451,7 +503,6 @@ body{
 #check{display: none;}
 .open,.close {
   position: absolute;
-  color: black;
   cursor: pointer;
   font-size: 1.5rem;
   display: none;
@@ -507,6 +558,7 @@ body{
   .open,
   .close {
     display: block;
+    color: var(--text-color);
   }
 
   .open {
@@ -514,7 +566,7 @@ body{
   }
 
   .close{
-    color: white;
+    color: black;
   }
 
   .open:hover {
@@ -538,7 +590,7 @@ body{
   } */
 
   .brand h1 {
-    font-size: 24px;
+    font-size: 22px;
     margin-left: 70px;
   }
 
